热更新框架基版告一段落
解决上传文件大小和本地文件大小不一致的bug

--- a/.gitignore
+++ b/.gitignore
@@ -75,4 +75,4 @@ crashlytics-build.properties
 /HybridCLRData
 /ServerData
 /HotUpdateServer/HotUpdateData
-/HotUpdateServer/HotUpdateServer.exe
+/HotUpdateServer/Build
