--- a/Assets/ScriptsHot/HotUpdate.asmdef
+++ b/Assets/ScriptsHot/HotUpdate.asmdef
@@ -9,10 +9,8 @@
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": true,
-    "precompiledReferences": [
-        "DOTween.dll"
-    ],
+    "overrideReferences": false,
+    "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
