--- a/Assets/ScriptsHot/HotUpdate.asmdef
+++ b/Assets/ScriptsHot/HotUpdate.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
-        "GUID:72154a4bfa9e5744587c2a9f6f353630"
+        "GUID:72154a4bfa9e5744587c2a9f6f353630",
+        "GUID:152633f8b393c58429b25f61232edebe"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
